[package]
name = "habits"
version = "0.1.0"
authors = ["mtso <~@mtso.io>"]
publish = false

[dependencies]
#rocket = "0.3.15"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "b0f86dc" }
#rocket_codegen = "0.3.15"
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "b0f86dc" }
#rocket_contrib = "0.3.15"
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "b0f86dc" }

log = "0.4.3"
ksuid = { git = "https://github.com/mtso/ksuid.git", rev = "08373c9" }
serde = "1.0.70"
serde_json = "1.0.24"
serde_derive = "1.0.70"
rand = "0.5.4"
serde_bytes = "0.10.4"
chrono = { version = "0.4", features = ["serde"] }

# base62 from ksuid
time = "0.1.40"
byteorder = "1.2.3"
resize-slice = "0.1.3"
num = "0.2.0"
bincode = "1.0.1"

[dependencies.rocksdb]
git = "https://github.com/mtso/rust-rocksdb.git"
tag = "rocksdb-5.6.1"
